@@ -19,7 +19,7 @@
     Boston, MA 02110-1301, USA.
 */
 
-#include "KMLdescriptionTagHandler.h"
+#include "KMLDescriptionTagHandler.h"
 
 #include <QtCore/QDebug>
 
