@@ -1,3 +1,13 @@
+2008-06-06  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
+    * src/lib/geodata/handlers/kml/KMLRoleTagHandler.cpp
+    * src/lib/geodata/handlers/kml/KMLAreaTagHandler.cpp
+    * src/lib/geodata/handlers/kml/KMLCountrycodeTagHandler.cpp
+    * src/lib/geodata/handlers/kml/KMLPopTagHandler.cpp
+    * src/lib/geodata/handlers/kml/KMLDescriptionTagHandler.cpp
+
+    Fix compile errors.
+
 2008-06-05  Patrick Spendrin    <ps_ml@gmx.de>
 
     * src/lib/geodata/GeoDataTest.cpp
